<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Activity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nama"
        android:textSize="20dp"
        android:id="@+id/tvNama"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Kode_barang"
        android:textSize="20dp"
        android:id="@+id/tvKode"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_barang"
        android:textSize="20dp"
        android:id="@+id/tvNbarang"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/harga_barang"
        android:textSize="20dp"
        android:id="@+id/tvhargabarang"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_harga"
        android:textSize="20dp"
        android:id="@+id/tvTotalHarga"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount_member"
        android:textSize="20dp"
        android:id="@+id/tvDiscountMember"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount_harga"
        android:textSize="20dp"
        android:id="@+id/tvdiscountharga"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_harga_dibayar"
        android:textSize="20dp"
        android:id="@+id/tvtotal"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/btnShare"
        />

</LinearLayout>